[gd_scene load_steps=10 format=3 uid="uid://cwyqrp0q7whgt"]

[ext_resource type="Script" path="res://scripts/entities/enemy.gd" id="1_8iojl"]
[ext_resource type="Texture2D" uid="uid://rfuucfixr2kq" path="res://sprites/ships_enemy/enemy_ship_1.png" id="2_0k3g7"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2_hrryh"]
[ext_resource type="Script" path="res://scripts/components/movement_component.gd" id="3_jk5l2"]
[ext_resource type="Script" path="res://scripts/components/combat_component.gd" id="4_f3xcd"]
[ext_resource type="Script" path="res://scripts/core/state_machine.gd" id="4_s1ji4"]
[ext_resource type="Script" path="res://scripts/states/enemy_state_idle.gd" id="5_d48bf"]
[ext_resource type="Script" path="res://scripts/states/enemy_state_follow.gd" id="6_vh6ub"]
[ext_resource type="Script" path="res://scripts/components/explode_fire_component.gd" id="9_n82mv"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_8iojl")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_hrryh")
max_health = 50.0

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_jk5l2")
speed = 150.0

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("4_f3xcd")

[node name="ExplodeFireComponent" type="Node" parent="."]
script = ExtResource("9_n82mv")
explosion_scale = 1.2
screen_shake_intensity = 7.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0k3g7")

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -15.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -22.0
color = Color(1, 0, 0, 1)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_s1ji4")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_d48bf")

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource("6_vh6ub")